--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-device-info": "^14.0.1",
     "react-native-permissions": "^5.2.0",
+    "react-native-sim-data": "^3.0.0",
     "react-native-sms": "^1.12.0"
   },
   "devDependencies": {
