--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 <uses-permission android:name="android.permission.READ_SMS" />
 <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 <uses-permission android:name="android.permission.READ_CALL_LOG" />
-<uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+<!-- <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" /> -->
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
